--- a/css/index.css
+++ b/css/index.css
@@ -38,4 +38,22 @@ body {
 .cabecalho-principal-menu{
 	width: 50%;
 }
+.apresentacao .conteiner{
+	width: 90%;
+	margin: 0 auto;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	padding: 50px  0;
+}
+.apresentacao img{
+	width: 200px;
+	height: 250px;
+}
+.apresentacao .apresentacao-titulo{
+	font-family: 'Dancing Script', cursive;
+	padding: 10px 0;
+	font-size: 60px;
+	font-weight: bold;
+}
 
