--- a/css/index.css
+++ b/css/index.css
@@ -93,7 +93,8 @@ body {
 	font-weight: bold;
 	font-family: 'Roboto', sans-serif;
 }
-.experiencia-principal .conteiner{
+/* formatação das sessões de conteudo*/
+.experiencia-principal .conteiner, .conhecimentos-principal .conteiner{
 	width: 90%;
 	display: flex;
 	background: rgb(147,60,204);
@@ -102,7 +103,7 @@ body {
 	padding: 20px 0;
 
 }
-.experiencia-principal-conteudo{
+.experiencia-principal-conteudo, .conhecimentos-principal-conteudo{
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
@@ -114,3 +115,5 @@ body {
 	font-family: 'Roboto', sans-serif;
 	font-size: 20px; 
 }
+/* fim da formatação das sessões de conteudo*/
+
