--- a/css/conhecimentos.css
+++ b/css/conhecimentos.css
@@ -1,12 +1,16 @@
 .conhecimentos{
 	display: flex;
-
+	background-color: rgb(0,48,134);
+	flex-direction: column; 
+	padding-bottom: 30px; 
+	
 }
 .conhecimentos .conteiner{
 	height: 600px;
 	width: 80%;
-	background-color: rgb(138,161,166);
+	background-color: rgb(110,122,107);
 	margin: 20px auto;
+	border: solid 1px black;
 
 }
 
@@ -155,4 +159,5 @@
 	text-align: center;
 	font-size: 50px;
 	font-weight: bold;
+	color: rgb(205,211,180);
 }
