--- a/css/conhecimentos.css
+++ b/css/conhecimentos.css
@@ -1,6 +1,6 @@
 .conhecimentos{
 	display: flex;
-	background-color: rgb(0,48,134);
+	background-color: rgb(0,23,66);
 	flex-direction: column; 
 	padding-bottom: 30px; 
 	
@@ -24,9 +24,13 @@
 	height: 50px;
 	width: 170px;
 	padding: 5px;
-	background-color: rgb(242,242,242);
+	background-color: rgba(242,242,242,0.8);
 	border: none;
 	font-size:17px; 
+	transition: all 1s;
+}
+.btn-filtro:hover{
+	background-color: rgba(242,242,242,0.5)
 }
 
 .btn-focus{
@@ -44,7 +48,7 @@
 	font-size: 25px;
 	padding: 10px 20px;
 	width: 90%;
-	background-color:rgba(242,242,242,0.7); 
+	background-color:rgba(242,242,242,0.5); 
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -64,13 +68,7 @@
 	font-weight: bold;
 	margin: 0 auto;
 }
-.sumario ul{
-	display: flex;
-	margin: 0 auto;
-}
-.sumario li{
-	padding: 0 10px;
-}
+
 /*modal*/
 
 .modal{
