--- a/css/index.css
+++ b/css/index.css
@@ -51,16 +51,16 @@ body {
 	flex-direction: column;
 	background-image:url("../img/fundo-outono.jpg"); 
 	background-color: rgba(0,0,0,0.7);  
-	 object-fit:cover;
-	 -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+	object-fit:cover;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	background-size: cover;
+	-o-background-size: cover;
 
 
 }
 .apresentacao .conteiner:before{
-	 object-fit:cover;
+	object-fit:cover;
 	position: absolute;
 	top: 110px;
 	left: 0;
@@ -88,7 +88,7 @@ body {
 	position: fixed;
 	z-index: 1000;
 	right: 5%; 
-    bottom: 5%;
+	bottom: 5%;
 }
 .sobre-principal{
 	display: flex;
@@ -98,13 +98,13 @@ body {
 }
 .sobre-principal .sobre-img img{
 	margin: 0 5px;
- 	object-fit:cover;
+	object-fit:cover;
 	width: 400px;
 	height: 100%;
 }
 .sobre-principal .sobre-img:before{
 	margin: 0 5px;
- 	object-fit:cover;
+	object-fit:cover;
 	position: absolute;
 	left: 0;
 	width: 400px;
@@ -120,8 +120,6 @@ body {
 	display: flex;
 	background: rgb(9,109,134);
 	justify-content: space-around;
-
-	
 	
 }
 .sobre-principal .conteiner .sobre-principal-conteudo{
@@ -138,26 +136,59 @@ body {
 	font-family: 'Roboto', sans-serif;
 	text-align: left;
 }
-
-
-/* formatação das sessões de conteudo*/
+.formacoes-principal{
+	flex-direction: column; 
+	margin: 5px 0;
+}
 .formacoes-principal .conteiner{
-	width: 90%;
 	display: flex;
-	background: rgb(138,161,166);
-	margin: 50px auto;
-	justify-content: space-around;
-	padding: 20px 0;
+	width: 100%;
+	height: 400px;
 
 }
-.formacoes-principal-conteudo{
+
+.conteiner-formacao{
+	background: red;
+	width: 25%;
+	text-align: center;
+
+}
+.conteiner-formacao{
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
-	width: 70%;
-	align-items: center;
-	text-align: justify;
+
+	
 }
+
+.conteiner-formacao:nth-child(1n+1){
+	background: rgb(213,85,0);
+}
+.conteiner-formacao:nth-child(1n+2){
+	background: rgb(19,143,166);
+}
+.conteiner-formacao:nth-child(1n +3){
+	background: rgb(47,155,87);
+	
+}
+.conteiner-formacao:nth-child(1n +4){
+	background: rgb(223,178,1);
+	
+}
+.conteiner-formacao:nth-child(1n+1) .titulo-formacao,.conteiner-formacao:nth-child(1n+2) .titulo-formacao{
+	font-size: 20px;
+	
+}
+.conteiner-formacao:nth-child(1n+3) .titulo-formacao,.conteiner-formacao:nth-child(1n+4) .titulo-formacao{
+	font-size: 20px;
+	padding-top:25px; 
+}
+.conteiner-formacao:nth-child(1n+3) .imagem-formacao,.conteiner-formacao:nth-child(1n+4) .imagem-formacao{
+	font-size: 20px;
+	padding-top: 20px; 
+}
+/* formatação das sessões de conteudo*/
+
 .conteudo-texto{
 	font-family: 'Roboto', sans-serif;
 	font-size: 20px; 
