--- a/css/index.css
+++ b/css/index.css
@@ -137,6 +137,7 @@ body {
 	text-align: left;
 }
 .formacoes-principal{
+	background-color:rgb(190,208,184); 
 	flex-direction: column; 
 	margin: 5px 0;
 }
@@ -148,7 +149,7 @@ body {
 }
 
 .conteiner-formacao{
-	background: red;
+	
 	width: 25%;
 	text-align: center;
 
@@ -160,32 +161,46 @@ body {
 
 	
 }
+.titulo-sessao-formacao{
+	font-size: 60px;
+	font-weight: bold;
+	text-align: center;
+	padding: 50px 0 30px 0;
+}
 
-.conteiner-formacao:nth-child(1n+1){
+.conteiner-formacao:nth-child(1n+1):hover{
 	background: rgb(213,85,0);
 }
-.conteiner-formacao:nth-child(1n+2){
+.conteiner-formacao:nth-child(1n+2):hover{
 	background: rgb(19,143,166);
 }
-.conteiner-formacao:nth-child(1n +3){
+.conteiner-formacao:nth-child(1n +3):hover{
 	background: rgb(47,155,87);
 	
 }
-.conteiner-formacao:nth-child(1n +4){
+.conteiner-formacao:nth-child(1n +4):hover{
 	background: rgb(223,178,1);
 	
 }
 .conteiner-formacao:nth-child(1n+1) .titulo-formacao,.conteiner-formacao:nth-child(1n+2) .titulo-formacao{
 	font-size: 20px;
-	
+	font-weight: bold;
 }
 .conteiner-formacao:nth-child(1n+3) .titulo-formacao,.conteiner-formacao:nth-child(1n+4) .titulo-formacao{
-	font-size: 20px;
-	padding-top:25px; 
+	font-size: 18px;
+	
+	font-weight: bold;
 }
 .conteiner-formacao:nth-child(1n+3) .imagem-formacao,.conteiner-formacao:nth-child(1n+4) .imagem-formacao{
-	font-size: 20px;
-	padding-top: 20px; 
+	
+	 
+	
+}
+.conteiner-conteudo-formacao{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
 }
 /* formatação das sessões de conteudo*/
 
