--- a/css/index.css
+++ b/css/index.css
@@ -341,6 +341,22 @@ background: rgb(255,203,93);
 .flex{
 	display: flex;
 }
+#loading{
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background-color: rgb(51,2,10);
+	top: 0;
+	left: 0;
+
+}
+#loading h1{
+	position: fixed;
+	top: 25%;
+	left: 20%;
+	font-size: 100px;
+	color: white;
+}
 /*Responsividade*/
 @media only screen and (max-device-width: 900px){
 
