--- a/css/index.css
+++ b/css/index.css
@@ -350,7 +350,16 @@ background: rgb(255,203,93);
 	margin: 10px 5px;
 	object-fit:cover;
 	width: 97%;	
+	max-width: 100%;
+	-moz-transition: all 0.3s;
+	-webkit-transition: all 0.3s;
+	transition: all 0.3s;
 	
+}
+.portfolio-img img:hover  {
+	-moz-transform: scale(1.1);
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
 }
 
 .flex{
